# botbase

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.windsurf/workflows/: release.md
botbase/: __init__.py  botapi.py  config.py  database.py  events.py  logger.py  models.py
botbase/channels/: base.py  interactive.py  telegram.py  webhook.py
botbase/tracker/: __init__.py  base.py  factory.py  jsonl_tracker.py  postgresql_tracker.py  sqlite_tracker.py
botbase/tracker/sqlite/: __init__.py  database.py  tracker.py
examples/counter_bot/: config.yml  main.py
examples/custom_channel_bot/: README.md  config.yml  main.py
examples/custom_channel_bot/channels/: jivo.py
examples/minimal_bot/: config.yml  conversation_events.jsonl  main.py
tests/: test_framework.py  test_jsonl_tracker.py  test_sqlite_tracker.py
