[tool.poetry]
name = "botbase"
version = "0.2.1"
description = "A lightweight, async-first chatbot framework with conversation persistence and event handling."
authors = ["Sobir Bobiev <sobir.bobiev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sobir-git/botbase"
packages = [{include = "botbase"}]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
aiohttp = "^3.11.11"
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.2"
prompt-toolkit = "^3.0.50"
sqlalchemy = {version = "^2.0.37", extras = ["asyncio"]}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
ruff = "^0.9.4"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
chatbot = "botbase.botapi:runserver"

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
